fixing timeline on mobile

--- a/styles.scss
+++ b/styles.scss
@@ -1632,7 +1632,7 @@ figcaption{
   .radio:checked ~ .content-tl p {
     max-height: 900px;
     position: relative;
-    top: 30px;
+    top: 25px;
     padding-bottom: 10px;
   } 
 }
